syntax = "proto2";

message LegacyStartupState {
    optional string uuid = 1 [deprecated = true];
    optional string countryInit = 19;
    optional bool hadFirstStartup = 22 [default = false];
    optional string deviceId = 24 [deprecated = true];
    optional string deviceIdHash = 25 [deprecated = true];
}
