syntax = "proto2";

message RemoteApphudConfig {

  optional bool enabled = 1 [default = false];
  optional string apiKey = 2 [default = ""];
}
